--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header{
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7),url("/public/girlfitness.jpg"));
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+body{
+  font-family: "Poppins",sans-serif;
+  background-color: aliceblue;
 }
